# MtblsWS-Py

./: .coveralls.yml  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.singularity  README.md  app.py  aws_credentials.cfg  config.py  conftest.py  datamover_observer_exit.sh  datamover_observer_init.sh  datamover_observer_monitor.sh  docker-compose.yml  get_worker_status.sh  install.txt  isaApiClient.py  logging.conf  logging_ubuntu.conf  logging_wp-np3-15.conf  logging_wp-np3-15.ebi.ac.uk.conf  logging_wp-p3s-15.conf  logging_wp-p3s-15.ebi.ac.uk.conf  logging_wp-p3s-19.ebi.ac.uk.conf  mtblsWS-Py.py  mtblsWSclient.py  pyproject.toml  pytest.ini  requirements.txt  restart.sh  restart_flask.sh  restart_gunicorn.sh  run-docker-service.sh  run-docker.sh  run-docker.template.sh  (+26 more)
Metaspace/Maori/model/: __init__.py  maoriStudy.py  maori_schema.json
Metaspace/Maori/parser/: maori_parser.py  maori_validator.py
app/: __init__.py  file_utils.py  isa_models.py  study_folder_utils.py  utils.py  wsapp.py  wsapp_config.py
app/config/: __init__.py  base.py  utils.py
app/config/model/: auth.py  beacon.py  bioportal.py  bluesky.py  celery.py  chebi.py  database.py  elasticsearch.py  email.py  external_dependencies.py  file_filters.py  file_resources.py  flask.py  ftp_server.py  globus.py  google.py  hpc_cluster.py  jira.py  metaspace.py  mhd.py  redis_cache.py  report.py  server.py  study.py  twitter.py  worker.py
app/modules/Metaspace/: __init__.py
app/services/cluster/: hpc_client.py  hpc_utils.py  lsf_client.py  slurm_client.py
app/services/compound/: compound_service.py
app/services/storage_service/: __init__.py  acl.py  exceptions.py  file_descriptor.py  file_manager.py  globus.py  models.py  storage.py  storage_service.py
app/services/study/: lite_study_configuration.py  model.py  study_configuration.py
app/tasks/: bash_client.py  datamover_exit.py  datamover_init.py  datamover_monitor.py  datamover_ping.py  datamover_worker_utils.py  hpc_client.py  hpc_rsync_worker.py  hpc_study_rsync_client.py  hpc_utils.py  hpc_worker_bash_runner.py  logging_filter.py  lsf_client.py  slurm_client.py  utils.py  worker.py
app/tasks/common/: elasticsearch.py  email.py  ftp_operations.py  remote_folder_operations.py
app/tasks/cronjob_tasks/: check_unstarted_revision_tasks.py
app/tasks/curation/: metabolon.py
app/ws/: MapStudies.py  MzML2ISA.py  Partner_utils.py  __init__.py  about.py  app_status.py  assay_protocol.py  assay_table.py  biostudies.py  chebi_pipeline_utils.py  chebi_workflow.py  chebi_ws.py  cluster_jobs.py  comments.py  compare_files.py  compress.py  cronjob.py  curation_log.py  db_connection.py  df_utils.py  dom_utils.py  download_data_file.py  enzyme_portal_helper.py  file_mapper.py  file_reference_evaluator.py  folder_maintenance.py  ftp_filemanager_testing.py  globus.py  google_calendar.py  google_sheet_utils.py  internal.py  isaApiClient.py  isaAssay.py  isaInvestigation.py  isaStudy.py  isaStudySubmission.py  isaTabInvestigation.py  isa_api_client_v1.py  isa_table_sheet.py  isa_table_templates.py  (+46 more)
deployment/: configuration.sh  deploy.sh
deployment/steps/: build_container.sh  build_sif.sh  deploy_common_worker.sh  deploy_datamover_proxy.sh  deploy_datamover_worker.sh  deploy_ws.sh
docker-instance/: aws_credentials.cfg
docs/: Makefile  conf.py  make.bat
instance/: config.py
resources/: ClassyFire_Mapping_VLOOKUP.tsv  KEGG organism list.tsv  MetaboLightsAssayMaster.tsv  MetaboLightsSampleMaster.tsv  Metabolights.owl  chebi_kegg.tsv  chebi_masterlist.txt  classification_mapping.tsv  es_all_mappings.json  es_compound_mappings.json  es_study_mappings.json  fella.R  fella.sh  filename_mappings.tsv  glytoucan.tsv  hmdb_kegg.tsv  m_metabolite_profiling_NMR_spectroscopy_v2_maf.tsv  m_metabolite_profiling_mass_spectrometry_v2_maf.tsv  metabolights_zooma.tsv  mzML1.1.1_idx.xsd  s_Sample.txt  study_report.sql  template_logging.conf  updateDB.sql  user_report.sql  validation_schema.json
resources/templates/: config.yaml
scripts/: MTBLS681.sql  add_partner_column_to_users_table.sql  create_study_summary_report_from_json.py  create_study_tasks_table.sql  create_test_data_files.py  cross_reference_study_statuses.py  first_private_date_column_update.sql  maintain_folders.py  maintain_private_ftp_folders.py  maintain_study_data_files.py  maintain_study_folders.py  maintain_study_metadata_files.py  make_study_private.py  mtbls_accession_db_update.sql  refactor_study_folder.py  run_metabolon.py  run_metabolon_pipeline.py  study_folder_fix.py  study_folder_maintenance.py  study_revision_update.sql  sync_readonly_folders.py
scripts/email_tasks/: models.py  send_email.py  study_report.py  utils.py
scripts/mhd_enabled/: add_study_template.sql  data_policy_agreement.sql  mhd_updates.sql
scripts/migration/: create_data_file_index.py  create_input_file.py  data_folder_update_pipeline.py  revision_update.py  utils.py
tests/: Metabolights.owl  Metabolights_old.owl  __init__.py  catalog-v001.xml  fixtures.py  mapStudies.py  test_api.py  test_api_DELETE_methods.py  test_api_GET_methods.py  test_api_POST-ADD_methods.py  test_api_PUT-UPDATE_methods.py  test_api_UPDATE_methods.py  tests.py
tests/Postman/: MtblsWs-Py - All DELETE Tests.postman_collection.json  MtblsWs-Py - All GET Tests.postman_collection.json  MtblsWs-Py - All POST-ADD Tests.postman_collection.json  MtblsWs-Py - All PUT-UPDATE Tests.postman_collection.json  MtblsWs-Py - All UPDATE Tests.postman_collection.json  MtblsWs-Py - Tests All.postman_collection.json
tests/endpoints/: test_create_acession.py  test_isa_study.py  test_mtbls_private_studies.py  test_mtbls_studies.py
tests/old/: test_api_GET_methods.py
tests/ws/: check_confguration.py  test_config.py  test_configuration_parameters.py  test_metabl_ws_client.py  test_mtbls_ws_client.py  test_table_editor.py
tests_old/old/: mapStudies.py  test_api_DELETE_methods.py  test_api_GET_methods.py  test_api_POST-ADD_methods.py  test_api_PUT-UPDATE_methods.py
(+236 files in other folders)
