[project]
name = "mtblsws-py"
version = "2.2.0"
description = ""
authors = [{ name = "MetaboLights Team", email = "metabolights-dev@ebi.ac.uk" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6,<3",
    "pydantic-settings>=2.8.1,<3",
    "flask-restful>=0.3.10,<0.4",
    "toml>=0.10.2,<0.11",
    "metaspace2020>=2.0.9,<3",
    "flask-cors>=5.0.1",
    "flask-mail>=0.10.0,<0.11",
    "celery>=5.4.0",
    "redis>=6.4.0,<7",
    "zeep>=4.3.1,<5",
    "passlib>=1.7.4,<2",
    "cirpy>=1.0.2,<2",
    "ctfile>=0.1.12,<0.2",
    "email-validator>=2.2.0,<3",
    "elasticsearch",
    "flask>=3.1.2",
    "flask-cors>=5.0.1",
    "flask-mail>=0.10.0,<0.11",
    "flask-restful>=0.3.10,<0.4",
    "flask-restful-swagger",
    "fuzzywuzzy>=0.18.0,<0.19",
    "globus-sdk>=4.5.0",
    "google-api-python-client>=2.193.0,<3",
    "gspread>=6.2.0,<7",
    "gspread-dataframe>=4.0.0,<5",
    "gunicorn>=23.0.0,<24",
    "isatools",
    "jira>=3.8.0,<4",
    "jsonpickle>=4.0.2,<5",
    "marshmallow==2.21.0",
    "metabolights-utils>=1.4.23,<2",
    "metaspace2020>=2.0.9,<3",
    "mhd-model>=0.1.74",
    "mzml2isa>=1.1.1",
    "python-keycloak>=5.8.1",
    "cachetools>=6.2.2",
    "psycopg[binary,pool]>=3.3.3",
    "sqlalchemy>=2.0.48",
    "python-multipart>=0.0.22",
    "flask>=3.1.2",
    "mhd-model>=0.1.74",
    "isatools",
    "elasticsearch",
    # security related
    "cryptography>=46.0.7",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "vulture>=2.14,<3",
    "ruff>=0.14.7,<1",
    "import-linter>=2.5,<3",
    "pre-commit>=4.5.0"
]
[tool.uv]
default-groups = []

[tool.uv.sources]
flask-restful-swagger = { git = "https://github.com/EBI-Metabolights/flask-restful-swagger.git", rev = "master" }
elasticsearch = { git = "https://github.com/EBI-Metabolights/elasticsearch-py.git", rev = "elasticsearch-v1.9.1" }
isatools = { git = "https://github.com/EBI-Metabolights/isa-api.git", rev = "master" }
elasticsearch = { git = "https://github.com/EBI-Metabolights/elasticsearch-py.git", rev = "elasticsearch-v1.9.1" }

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "scripts",
    "tests",
    "resources",
]

[tool.hatch.build.targets.wheel]
include = [
    "app",
    "scripts",
    "tests",
    "resources",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "G", "SLF",  "Q"]
ignore = [ "ANN401", "F841", "E722", "E731", "SLF001", "G001", "G002", "G003", "G004"]

fixable = ["ALL"]

[tool.importlinter]
include_external_packages = true
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Unexpected dependencies"
type = "forbidden"
source_modules = [
   "app",
]
forbidden_modules = [
    "tweepy",
    "jose",
    "pillow"
]
ignore_imports = [
]
